# olio-ohjelmointi

H2/: CMakeLists.txt  car.cpp  main.cpp
H3a/: chef.cpp  chef.h  main.cpp
H3b/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
H5/: CMakeLists.txt  class2a.cpp  class2a.h  classa1.cpp  classa1.h  classb.h  main.cpp
H6a/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
H6b/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  main.cpp
Harjoitus1/: CMakeLists.txt  main.cpp
Harjoitus2/: rectangle.cpp  rectangle.h  student.h
h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
